gbr model 2 pkl zip

--- a/src/31-Jan-2018-Modeling_Tests.ipynb
+++ b/src/31-Jan-2018-Modeling_Tests.ipynb
@@ -309,6 +309,19 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "with open('gbr_2.pkl', 'wb') as f:\n",
+    "   # Write the model to a file.\n",
+    "   pickle.dump(gbr_2, f)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 61,
    "metadata": {},
    "outputs": [
