added updates to unpickle model

--- a/src/Feb_01_2018_Testing_Predictions_Real_Time.ipynb
+++ b/src/Feb_01_2018_Testing_Predictions_Real_Time.ipynb
@@ -778,6 +778,79 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 705,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "now = datetime.datetime.now()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 731,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2018-02-03 00:00:00\n",
+      "2018-02-09 00:00:00\n"
+     ]
+    }
+   ],
+   "source": [
+    "from datetime import date\n",
+    "from datetime import datetime\n",
+    "from datetime import timedelta\n",
+    "dt = date.today()\n",
+    "dt_midnight = datetime.combine(dt, datetime.min.time())\n",
+    "time_start = dt_midnight + timedelta(hours = 24)\n",
+    "time_end = dt_midnight + timedelta(hours = 168)\n",
+    "print(time_start)\n",
+    "print(time_end)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 723,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "datetime.timedelta(1)"
+      ]
+     },
+     "execution_count": 723,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 729,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "192"
+      ]
+     },
+     "execution_count": 729,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "8*24"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 638,
    "metadata": {},
    "outputs": [
@@ -795,6 +868,15 @@
    "source": [
     "bar_yy['20180123':'20180129']['y_hat'].index[0].day"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
