debug make dash board code

--- a/src/Feb_01_2018_Testing_Predictions_Real_Time.ipynb
+++ b/src/Feb_01_2018_Testing_Predictions_Real_Time.ipynb
@@ -787,15 +787,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 731,
+   "execution_count": 736,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2018-02-03 00:00:00\n",
-      "2018-02-09 00:00:00\n"
+      "2018-02-03\n",
+      "2018-02-09\n"
      ]
     }
    ],
@@ -804,30 +804,32 @@
     "from datetime import datetime\n",
     "from datetime import timedelta\n",
     "dt = date.today()\n",
-    "dt_midnight = datetime.combine(dt, datetime.min.time())\n",
-    "time_start = dt_midnight + timedelta(hours = 24)\n",
-    "time_end = dt_midnight + timedelta(hours = 168)\n",
+    "#dt_midnight = datetime.combine(dt, datetime.min.time())\n",
+    "time_start = dt + timedelta(hours = 24)\n",
+    "time_end = dt + timedelta(hours = 168)\n",
     "print(time_start)\n",
     "print(time_end)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 723,
+   "execution_count": 735,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "datetime.timedelta(1)"
+       "datetime.date(2018, 2, 2)"
       ]
      },
-     "execution_count": 723,
+     "execution_count": 735,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "date.today()"
+   ]
   },
   {
    "cell_type": "code",
